tpaw-account-widget: improve the size of the various fields
Fields in the main area now are at least 280px wide. This solves the
problem with fields being too small.

All the fields should expand to fix the available horizontal space. This
solves the problem with fields leaving empty space on their side (in
particular when the advanced section is expanded).

--- a/tp-account-widgets/tpaw-account-widget-icq.ui
+++ b/tp-account-widgets/tpaw-account-widget-icq.ui
@@ -50,6 +50,8 @@
           <object class="GtkEntry" id="entry_uin">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -60,6 +62,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -149,6 +153,7 @@
               <object class="GtkEntry" id="entry_server">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -191,6 +196,7 @@
               <object class="GtkEntry" id="entry_charset">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -247,6 +253,8 @@
               <object class="GtkEntry" id="entry_uin_simple">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="width_request">280</property>
+                <property name="hexpand">True</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -296,6 +304,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
         </child>
       </object>
