--- a/tp-account-widgets/tpaw-account-widget-aim.ui
+++ b/tp-account-widgets/tpaw-account-widget-aim.ui
@@ -50,6 +50,8 @@
           <object class="GtkEntry" id="entry_screenname">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -60,6 +62,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -226,6 +230,8 @@
               <object class="GtkEntry" id="entry_screenname_simple">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="width_request">280</property>
+                <property name="hexpand">True</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -275,6 +281,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
         </child>
       </object>
