--- a/tp-account-widgets/tpaw-account-widget-groupwise.ui
+++ b/tp-account-widgets/tpaw-account-widget-groupwise.ui
@@ -48,6 +48,8 @@
           <object class="GtkEntry" id="entry_id">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -74,6 +76,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -149,6 +153,7 @@
               <object class="GtkEntry" id="entry_server">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -219,55 +224,59 @@
               <object class="GtkEntry" id="entry_id_simple">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-              </object>
-              <packing>
+                <property name="width_request">280</property>
+                <property name="hexpand">True</property>
+            </object>
+            <packing>
                 <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="label_example">
+            </packing>
+        </child>
+        <child>
+            <object class="GtkLabel" id="label_example">
                 <property name="visible">True</property>
                 <property name="xalign">0.10000000149011612</property>
                 <property name="label" translatable="yes">&lt;b&gt;Example:&lt;/b&gt; username</property>
                 <property name="use_markup">True</property>
                 <attributes>
-                  <attribute name="scale" value="0.8"/><!-- PANGO_SCALE_SMALL -->
+                    <attribute name="scale" value="0.8"/><!-- PANGO_SCALE_SMALL -->
                 </attributes>
-              </object>
-              <packing>
+            </object>
+            <packing>
                 <property name="position">1</property>
-              </packing>
-            </child>
-          </object>
+            </packing>
         </child>
+    </object>
+</child>
       </object>
       <packing>
-        <property name="position">1</property>
+          <property name="position">1</property>
       </packing>
-    </child>
-    <child>
+  </child>
+  <child>
       <object class="GtkLabel" id="label_password_simple">
-        <property name="visible">True</property>
-        <property name="xalign">0</property>
-        <property name="label" translatable="yes">What is your GroupWise password?</property>
+          <property name="visible">True</property>
+          <property name="xalign">0</property>
+          <property name="label" translatable="yes">What is your GroupWise password?</property>
       </object>
       <packing>
-        <property name="position">2</property>
+          <property name="position">2</property>
       </packing>
-    </child>
-    <child>
+  </child>
+  <child>
       <object class="GtkAlignment" id="alignment2">
-        <property name="visible">True</property>
-        <property name="xalign">0</property>
-        <property name="yalign">0</property>
-        <property name="xscale">0.34999999403953552</property>
-        <property name="yscale">0.34999999403953552</property>
-        <property name="left_padding">12</property>
-        <child>
-          <object class="GtkEntry" id="entry_password_simple">
+          <property name="visible">True</property>
+          <property name="xalign">0</property>
+          <property name="yalign">0</property>
+          <property name="xscale">0.34999999403953552</property>
+          <property name="yscale">0.34999999403953552</property>
+          <property name="left_padding">12</property>
+          <child>
+              <object class="GtkEntry" id="entry_password_simple">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
         </child>
       </object>
