--- a/tp-account-widgets/tpaw-account-widget-local-xmpp.ui
+++ b/tp-account-widgets/tpaw-account-widget-local-xmpp.ui
@@ -16,6 +16,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="hexpand">True</property>
+            <property name="width_request">280</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -27,6 +28,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="hexpand">True</property>
+            <property name="width_request">280</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -38,6 +40,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="hexpand">True</property>
+            <property name="width_request">280</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
