--- a/tp-account-widgets/tpaw-account-widget-msn.ui
+++ b/tp-account-widgets/tpaw-account-widget-msn.ui
@@ -48,6 +48,8 @@
           <object class="GtkEntry" id="entry_id">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -74,6 +76,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -149,76 +153,78 @@
               <object class="GtkEntry" id="entry_server">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-              </object>
-              <packing>
+                <property name="hexpand">True</property>
+            </object>
+            <packing>
                 <property name="left_attach">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkSpinButton" id="spinbutton_port">
+            </packing>
+        </child>
+        <child>
+            <object class="GtkSpinButton" id="spinbutton_port">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="adjustment">adjustment1</property>
                 <property name="climb_rate">1</property>
                 <property name="numeric">True</property>
-              </object>
-              <packing>
+            </object>
+            <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">1</property>
-              </packing>
-            </child>
-          </object>
+            </packing>
         </child>
-        <child type="label">
-          <object class="GtkLabel" id="label1">
-            <property name="visible">True</property>
-            <property name="label" translatable="yes">Advanced</property>
-            <attributes>
-              <attribute name="weight" value="bold"/>
-            </attributes>
-          </object>
-        </child>
+    </object>
+</child>
+<child type="label">
+    <object class="GtkLabel" id="label1">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Advanced</property>
+        <attributes>
+            <attribute name="weight" value="bold"/>
+        </attributes>
+    </object>
+</child>
       </object>
       <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">1</property>
+          <property name="expand">True</property>
+          <property name="fill">True</property>
+          <property name="position">1</property>
       </packing>
-    </child>
+  </child>
   </object>
   <object class="GtkVBox" id="vbox_msn_simple">
-    <property name="visible">True</property>
-    <property name="orientation">vertical</property>
-    <property name="spacing">6</property>
-    <child>
-      <object class="GtkLabel" id="label_id_simple">
-        <property name="visible">True</property>
-        <property name="xalign">0</property>
-        <property name="label" translatable="yes">What is your Windows Live ID?</property>
-      </object>
-      <packing>
-        <property name="position">0</property>
-      </packing>
-    </child>
-    <child>
-      <object class="GtkAlignment" id="alignment1">
-        <property name="visible">True</property>
-        <property name="xalign">0</property>
-        <property name="yalign">0</property>
-        <property name="xscale">0.34999999403953552</property>
-        <property name="yscale">0.34999999403953552</property>
-        <property name="bottom_padding">3</property>
-        <property name="left_padding">12</property>
-        <child>
-          <object class="GtkVBox" id="vbox1">
-            <property name="visible">True</property>
-            <property name="orientation">vertical</property>
-            <property name="spacing">4</property>
-            <child>
-              <object class="GtkEntry" id="entry_id_simple">
+      <property name="visible">True</property>
+      <property name="orientation">vertical</property>
+      <property name="spacing">6</property>
+      <child>
+          <object class="GtkLabel" id="label_id_simple">
+              <property name="visible">True</property>
+              <property name="xalign">0</property>
+              <property name="label" translatable="yes">What is your Windows Live ID?</property>
+          </object>
+          <packing>
+              <property name="position">0</property>
+          </packing>
+      </child>
+      <child>
+          <object class="GtkAlignment" id="alignment1">
+              <property name="visible">True</property>
+              <property name="xalign">0</property>
+              <property name="yalign">0</property>
+              <property name="xscale">0.34999999403953552</property>
+              <property name="yscale">0.34999999403953552</property>
+              <property name="bottom_padding">3</property>
+              <property name="left_padding">12</property>
+              <child>
+                  <object class="GtkVBox" id="vbox1">
+                      <property name="visible">True</property>
+                      <property name="orientation">vertical</property>
+                      <property name="spacing">4</property>
+                      <child>
+                          <object class="GtkEntry" id="entry_id_simple">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -268,6 +274,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="hexpand">True</property>
           </object>
         </child>
       </object>
