--- a/tp-account-widgets/tpaw-account-widget-yahoo.ui
+++ b/tp-account-widgets/tpaw-account-widget-yahoo.ui
@@ -45,6 +45,8 @@
           <object class="GtkEntry" id="entry_id">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -55,6 +57,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="width_request">280</property>
+            <property name="hexpand">True</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -159,6 +163,7 @@
                   <object class="GtkEntry" id="entry_locale">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -169,6 +174,7 @@
                   <object class="GtkEntry" id="entry_charset">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -257,6 +263,7 @@
               <object class="GtkEntry" id="entry_id_simple">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -306,6 +313,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="visibility">False</property>
+            <property name="hexpand">True</property>
           </object>
         </child>
       </object>
