--- a/tp-account-widgets/tpaw-account-widget-aim.ui
+++ b/tp-account-widgets/tpaw-account-widget-aim.ui
@@ -24,6 +24,7 @@
             <property name="label" translatable="yes">Pass_word</property>
             <property name="use_underline">True</property>
             <property name="mnemonic_widget">entry_password</property>
+            <property name="margin_top">6</property>
             <style>
               <class name="dim-label"/>
             </style>
@@ -64,6 +65,7 @@
             <property name="visibility">False</property>
             <property name="width_request">280</property>
             <property name="hexpand">True</property>
+            <property name="margin_top">6</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
