--- a/tp-account-widgets/tpaw-account-widget-jabber.ui
+++ b/tp-account-widgets/tpaw-account-widget-jabber.ui
@@ -241,6 +241,7 @@ Use &lt;a href="http://www.facebook.com/username/"&gt;this page&lt;/a&gt; to cho
             <property name="visibility">False</property>
             <property name="width_request">280</property>
             <property name="hexpand">True</property>
+            <property name="margin_top">6</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -404,6 +405,7 @@ Use &lt;a href="http://www.facebook.com/username/"&gt;this page&lt;/a&gt; to cho
             <property name="use_underline">True</property>
             <property name="justify">right</property>
             <property name="mnemonic_widget">entry_password</property>
+            <property name="margin_top">6</property>
             <style>
               <class name="dim-label"/>
             </style>
