--- a/tp-account-widgets/tpaw-account-widget-msn.ui
+++ b/tp-account-widgets/tpaw-account-widget-msn.ui
@@ -22,6 +22,7 @@
             <property name="xalign">1</property>
             <property name="label" translatable="yes">Pass_word</property>
             <property name="use_underline">True</property>
+            <property name="margin_top">6</property>
             <style>
               <class name="dim-label"/>
             </style>
@@ -78,6 +79,7 @@
             <property name="visibility">False</property>
             <property name="width_request">280</property>
             <property name="hexpand">True</property>
+            <property name="margin_top">6</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
