--- a/tp-account-widgets/tpaw-account-widget-jabber.ui
+++ b/tp-account-widgets/tpaw-account-widget-jabber.ui
@@ -102,7 +102,7 @@ Use &lt;a href="http://www.facebook.com/username/"&gt;this page&lt;/a&gt; to cho
     </child>
     <child>
       <object class="GtkCheckButton" id="remember_password_fb_simple">
-        <property name="label" translatable="yes">Remember Password</property>
+        <property name="label" translatable="yes">Remember password</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
@@ -206,7 +206,7 @@ Use &lt;a href="http://www.facebook.com/username/"&gt;this page&lt;/a&gt; to cho
     </child>
     <child>
       <object class="GtkCheckButton" id="remember_password_g_simple">
-        <property name="label" translatable="yes">Remember Password</property>
+        <property name="label" translatable="yes">Remember password</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
@@ -763,7 +763,7 @@ Use &lt;a href="http://www.facebook.com/username/"&gt;this page&lt;/a&gt; to cho
     </child>
     <child>
       <object class="GtkCheckButton" id="remember_password_simple">
-        <property name="label" translatable="yes">Remember Password</property>
+        <property name="label" translatable="yes">Remember password</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">False</property>
